<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scorekeeper Ping Pong</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Scorekeeper</string>
    <string name="app_subtitle">PING PONG</string>
    <string name="player1_hint">Player 1</string>
    <string name="player2_hint">Player 2</string>
    <string name="start_button_label">START</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="serve_label">Serve</string>
    <string name="up_label">+</string>
    <string name="down_label">-</string>
    <string name="finish_button_label">FINISH</string>
    <string name="starting_score">0</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="serves_won_heading">Serves won:</string>
    <string name="play_again_button_label">PLAY AGAIN!</string>
    <string name="no_serves_display">0%</string>
    <string name="content_desc_background">Ping Pong Background Image</string>
    <string name="title_activity_splash">Splash</string>
    <string name="splash_loading_label">Loading&#8230;</string>
    <string name="content_desc_table">Ping Pong Table Image</string>
    <string name="winner_heading">WINNER!</string>

</resources>
