<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kristen.scorekeeper.ScoreActivity" >

    <ImageView
        android:id="@+id/background_image"
        style="@style/BackgroundImage"
        android:contentDescription="@string/content_desc_background" >
    </ImageView>

    <com.kristen.scorekeeper.AspectRatioImageView
        android:id="@+id/ping_pong_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ping_pong_table_left" />

    <ImageView
        android:id="@+id/score_background_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/finishButton"
        android:layout_below="@id/ping_pong_table"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/score_background" >
    </ImageView>

    <LinearLayout
        android:id="@+id/playerServesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/ping_pong_table"
        android:layout_alignTop="@id/ping_pong_table"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" >

        <Button
            android:id="@+id/player1ServeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/player2ServeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerNamesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/score_name_horizontal_margin"
        android:layout_marginRight="@dimen/score_name_horizontal_margin"
        android:layout_marginTop="@dimen/score_name_vertical_padding" >

        <TextView
            android:id="@+id/player1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/player1"
            android:textColor="@android:color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/player2"
            android:textColor="@android:color/white"
            android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playerServesLayout"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_alignBottom="@id/score_background_image"
        android:layout_alignTop="@id/score_background_image"
        android:layout_marginLeft="@dimen/score_horizontal_margin"
        android:layout_marginRight="@dimen/score_horizontal_margin"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/player1ScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/player1UpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/up_button_custom" />

            <TextView
                android:id="@+id/player1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_score"
                android:textSize="80sp"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/player1DownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/down_button_custom" />
        </LinearLayout>

        <com.kristen.scorekeeper.AspectRatioImageView
            android:id="@+id/vs_circle_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/vs_circle"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/player2ScoreLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/player2UpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/up_button_custom" />

            <TextView
                android:id="@+id/player2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_score"
                android:textSize="80sp"
                android:textColor="@color/dark_blue" />

            <Button
                android:id="@+id/player2DownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/down_button_custom" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/finish_button_label"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_custom" />

</RelativeLayout>